Console overflow fix

--- a/ide/src/main/resources/style/console-pane.css
+++ b/ide/src/main/resources/style/console-pane.css
@@ -14,6 +14,10 @@
     -fx-fill: rgb(0,0,127);
     -fx-font-weight: 200;
 }
+.overflow {
+    -fx-fill: #827717;
+    -fx-font-weight: bold;
+}
 
 .styled-text-area .selection {
     -fx-fill: #D1C4E9;
